# contaBot

./: .gitignore  ContaBot_PRD_v2.0.docx  ContaBot_Roadmap_10Semanas.docx
.github/workflow/: agent.yml  api.yml
.github/workflows/: agent.yml  api.yml
agent/: main.py  pyproject.toml
infra/: README.md  docker-compose.yml
infra/postgres/init/: 01-create-databases.sql
orchestrator/: alembic.ini  dockerfile  main.py  pyproject.toml
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 20260508_0001_create_core_tables.py
orchestrator/app/: main.py  routes.py  server.py
orchestrator/app/controllers/: clientController.py  commandController.py  executionController.py  raizController.py  testeController.py
orchestrator/app/db/: dependencies.py  session.py
orchestrator/app/models/: __init__.py  audit_log.py  client.py  command.py  error_dictionary.py  execution.py
orchestrator/app/schemas/: clientSchema.py  commandSchema.py  executionSchema.py
orchestrator/app/services/: clientService.py  commandService.py  executionService.py
orchestrator/tests/: conftest.py  test_clients.py  test_commands.py  test_executions.py  test_main.py
